@@ -2,6 +2,9 @@ $Id:
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- added all-servers option to dnsmasq and removed overlap check as having multiple
+  nameservers per domain is a valid configuration
+  
 - added function is_ipaddr4or6
   updated dnsmasq_edit and System setup page to use this function
   change to status_interfaces to list all ips on an interface 
